--- a/2019-08-16_data-rectangling-in-r/hands-on.Rmd
+++ b/2019-08-16_data-rectangling-in-r/hands-on.Rmd
@@ -1,11 +1,13 @@
 ---
 title: "Practice on data rectangling"
 author: "Muhammad Aswan Syahputra"
-date: "8/5/2019"
 output:
   html_document:
+    toc: true
+    toc_float: true
+    number_section: true
     df_print: paged
-    theme: flatly
+    theme: cerulean
     highlight: pygments
 ---
 
@@ -22,10 +24,19 @@ knitr::opts_chunk$set(
 )
 ```
 
+## Mengambil data Instagram
+Dalam studi kasus ini kita akan menggunakan data yang berasal dari akun instagram [Tirto](https://instagram.com/tirtoid). Kita akan melakukan *scrapping* dengan menggunakan aplikasi instagram-scrapper yang dapat diunduh dari [github.com/rarcega/instagram-scraper](https://github.com/rarcega/instagram-scraper).
+
+Berikut ini adalah baris kode yang digunakan untuk mengambil data dari 100 unggahan terakhir akun instagram [Tirto](https://instagram.com/tirtoid). Data tersebut kita simpan dalam sub-direktori `data-raw`. Data tersebut sudah disediakan dalam studi kasus ini sehingga Anda tidak perlu menjalankan baris kode di bawah ini.
+
 ```{bash scrape-tirto, eval = FALSE}
 cd data-raw
 instagram-scraper tirtoid -m 100 --comments --media-types none
 ```
+
+## Mengaktifkan paket
+
+Beberapa paket yang akan digunakan dalam studi kasus ini diantaranya adalah `jsonlite`, `listviewer`, dan `tidyverse`. Silakan pasang (jika belum) dan aktifkan tiga paket tersebut terlebih dahulu.
 
 ```{r load-packages}
 library(jsonlite)
@@ -33,10 +44,23 @@ library(listviewer)
 library(tidyverse)
 ```
 
-```{r inspect-list}
+## Impor dan inspeksi data
+
+Data hasil *scrapping* telah tersedia dalam sub-direktori `data-raw/tirtoid` dengan nama berkas `tirtoid.json`. Kita akan menggunakan fungsi `fromJSON()` dari paket `jsonlite` untuk mengimpor berkas tersebut. Impor dan simpanlah berkas tersebut sebagai obyek R dengan nama `tirto_raw`!
+
+```{r import-data}
 tirto_raw <- fromJSON("data-raw/tirtoid/tirtoid.json")
-jsonedit(tirto_raw)
 ```
+
+Selanjutnya silakan melakukan inspeksi terhadap `tirto_raw` untuk meilhat strukturnya. Anda dapat menggunakan fungsi `str` untuk melakukan hal tersebut, namun untuk mempermudah silakan Anda pergunakan fungsi `jsonedit()` dari paket `listviewer`. Pergunakan argumen `mode = "view"`!
+
+```{r inspect-list}
+jsonedit(tirto_raw, mode = "view")
+```
+
+## Ekstraksi data
+
+Setelah melakukan inspeksi struktur data `tirto_raw`, Anda mungkin menyadari bahwa sejatinya konten data tersimpan sebagai elemen pertama dalam `list`.Ekstraklah elemen pertama tersebut dengan menggunakan fungsi `pluck()`! Kemudian kita juga akan melakukan beberapa proses untuk akhirnya menyimpan `list` tersebut ke dalam sebuah obyek `tibble` bernama `tirto_tbl` sebagai berikut:
 
 ```{r transform-list}
 tirto_tbl <-
@@ -47,6 +71,9 @@ tirto_tbl <-
   enframe(name = "id", value = "post")
 tirto_tbl
 ```
+
+Selanjutnya kita dapat melakukan ekstraksi data dengan menggunakan fungsi `map()` dari paket `purrr`. Selain itu, data hasil ekstraksi tersebut dapat dengan mudah kita simpan sebagai kolom baru dengan menggunakan fungsi `mutate()` dari paket `dplyr`. Perhatikan dan lengkapilah bagian yang kosong pada baris kode berikut!
+
 
 ```{r use-map}
 tirto_tbl %>%
@@ -65,6 +92,8 @@ tirto_tbl %>%
   )
 ```
 
+Anda telah berhasil mengekstrak data dan menyimpan hasilnya ke dalam beberapa kolom baru. Namun jika diperhatikan maka akan nampak jelas bahwa jenis kolom hasil ekstraksi tersebut masih berupa `list`. Anda dapat menyelesaikan permasalahan tersebut dengan cara menggunakan varian dari fungsi `map()`. Bacalah dokumentasi dari fungsi `map()` dengan cara menjalankan `?map` atau `help(map)` pada konsol! Apa persyaratan yang harus dipenuhi agar varian `map()` tersebut dapat bekerja dengan baik?
+
 ```{r use-map-variant}
 tirto_tbl %>%
   mutate(
@@ -82,6 +111,9 @@ tirto_tbl %>%
   )
 ```
 
+Setelah menjalankan baris kode di atas, sekarang hasil ekstraksi menjadi lebih baik karena beberapa kolom telah memiliki jenis data yang sesuai. Namun bagaimana caranya untuk melakukan hal seperti di atas secara otomatis? Apakah ada alternatif lain tanpa harus memilih varian `map()` satu per satu? Tentu saja ada! Hal tersebut dapat dilakukan dengan cara membuat sebuah fungsi ekstraksi data yang secara cerdas melakukan *flattening* pada hasil ekstraksi. Kita akan membuat fungsi tersebut dengan nama `smart_extract()` sebagai berikut:
+
+
 ```{r define-smart-extract}
 #' Smart extractor
 #'
@@ -89,20 +121,23 @@ tirto_tbl %>%
 #' @param .x A list or atomic vectors
 #' @param what An elemet of list to be extracted
 #' @return A list or possibly an atomic vector
-#' @importFrom purrr map
+#' @importFrom purrr map map_int
 #' @export
 smart_extract <- function(.x, ...) {
   dots <- list(...)
   res <- map(.x, dots, .default = NA)
-  if (all(vapply(res, length, integer(1)) == 1)) {
+  if (all(map_int(res, length) == 1)) {
     res <- unlist(res)
   }
   return(res)
 }
 ```
 
+Sekarang terapkanlah fungsi `smart_extract()` pada `tirto_tbl`! Anda dapat meniru baris kode pada *chunk* `use-map` atau `use-map-variant` dan kemudian mengganti fungsi `map()` atau variannya dengan `smart_extract()`. Sebagai catatan, Anda tidak memerlukan fungsi `list()` untuk mengekstrak data yang terletak di dalam sub-`list`. Simpanlah hasil ekstraksi data dalam obyek R bernama `tirto_extracted`!
+
 ```{r use-smart-extract}
-tirto_tbl %>% 
+tirto_extracted <- 
+  tirto_tbl %>% 
   mutate(
     post_time = smart_extract(post, "taken_at_timestamp"),
     is_video = smart_extract(post, "is_video"),
@@ -114,24 +149,14 @@ tirto_tbl %>%
     comments_time = smart_extract(post, "comments.data", "created_at"),
     comments_text = smart_extract(post, "comments.data", "text")
   )
+tirto_extracted
 ```
+
+Selamat Anda telah berhasil melakukan ekstraksi data! Namun pekerjaan Anda belum selesai karena masih ada beberapa kolom yang harus dibenahi. Kita akan menggunakan beberapa teknik dasar *data carpentry* untuk memperbaiki data seperti yang akan dicontohkan dalam *chunk* selanjutnya. Dapatkah Anda menjelaskan tahapan apa saja yang dilakukan dalam fungsi `mutate()` dan `select()`?
 
 ```{r extract-posts}
 tirto_posts <-
-  tirto_tbl %>% 
- mutate(
-    post_time = smart_extract(post, "taken_at_timestamp"),
-    is_video = smart_extract(post, "is_video"),
-    caption = smart_extract(post, 
-      "edge_media_to_caption.edges", "node", "text"
-    ),
-    tags = smart_extract(post, "tags"),
-    video_view = smart_extract(post, "video_view_count"),
-    media_like = smart_extract(post, "edge_media_preview_like.count"),
-    comments_username = smart_extract(post, "comments.data", "owner", "username"),
-    comments_time = smart_extract(post, "comments.data", "created_at"),
-    comments_text = smart_extract(post, "comments.data", "text")
-  ) %>% 
+  tirto_extracted %>% 
   mutate(
     post_time = as.POSIXct(post_time, origin = "1970-01-01"), # straighforward processing
     caption = caption %>% str_remove_all("\\n") %>% str_trim(), # lengthly processing
@@ -142,6 +167,14 @@ tirto_posts <-
 tirto_posts
 ```
 
++ Memperbaiki penulisan waktu pada kolom `post_time`
++ Menghapus tanda `\n` dan spasi berlebih pada kolom `caption`
++ Menghitung jumlah *tags* yang digunakan dan menyimpannya sebagai kolom baru bernama `n_tags`
++ Menuliskan *tags* dengan sebagai `string` yang dipisahkan oleh tanda koma pada kolom `tags`
++ Mengatur posisi kolom dan menghilangkan kolom `post`
+
+Hampir selesai! Tahap selanjutnya yang perlu dilakukan adalah mengekstrak informasi komentar dan menyimpannya baris per baris sesuai dengan `id` unggahan instagram Tirto. Anda cukup menggunakan fungsi `unnest()` dari paket `tidyr` untuk melakukan hal tersebut. Bacalah dokumentasi `unnest()` dan perhatikan apa syarat yang harus dipenuhi jika kita memiliki beberapa kolom yang akan di-*unnest* dengan sekaligus!. Meskipun pada dasarnya beberapa kolom telah diperbaiki, namun dalam contoh berikut kita akan kembali melakukan perbaikan kolom dengan menggunakan varian fungsi `mutate()` yaitu `mutate_at()` dan `mutate_if()`. Perhatikan baris kode berikut dan sebutkan kesamaan antara `mutate_at()` dan `mutate_if()`!
+
 ```{r extract-comments}
 tirto_comments <- 
   tirto_posts %>% 
@@ -151,3 +184,4 @@ tirto_comments <-
 tirto_comments
 ```
 
+> Selamat Anda telah berhasil menyelesaikan studi kasus ini! Sebagai tahap terakhir Anda dapat menyimpan `tirto_comments` sebagai berkas CSV atau lainnya. Perjalanan dari `JSON` menjadi `CSV` telah Anda lakukan dengan sukses :) 
