--- a/2019-08-16_data-rectangling-in-r/hands-on.Rmd
+++ b/2019-08-16_data-rectangling-in-r/hands-on.Rmd
@@ -25,9 +25,9 @@ knitr::opts_chunk$set(
 ```
 
 ## Mengambil data Instagram
-Dalam studi kasus ini kita akan menggunakan data yang berasal dari akun instagram [Tirto](https://instagram.com/tirtoid). Kita akan melakukan *scrapping* dengan menggunakan aplikasi instagram-scrapper yang dapat diunduh dari [github.com/rarcega/instagram-scraper](https://github.com/rarcega/instagram-scraper).
+Dalam studi kasus ini, kita akan menggunakan data yang berasal dari akun instagram [Tirto](https://instagram.com/tirtoid). Kita akan melakukan *scrapping* dengan menggunakan aplikasi **instagram-scrapper** yang dapat diunduh dari [github.com/rarcega/instagram-scraper](https://github.com/rarcega/instagram-scraper).
 
-Berikut ini adalah baris kode yang digunakan untuk mengambil data dari 100 unggahan terakhir akun instagram [Tirto](https://instagram.com/tirtoid). Dalam praktek ini data sudah disediakan di dalam sub-direktori `data-raw` sehingga Anda tidak perlu menjalankan baris kode untuk melakukan *scrapping* akun instagram Tirto.
+Berikut ini adalah baris kode yang digunakan untuk mengambil data dari 100 unggahan terakhir akun instagram [Tirto](https://instagram.com/tirtoid). Dalam praktek ini, data sudah disediakan di dalam sub-direktori `data-raw` sehingga Anda tidak perlu menjalankan baris kode untuk melakukan *scrapping* akun instagram.
 
 ```{bash scrape-tirto, eval = FALSE}
 cd data-raw
@@ -36,7 +36,7 @@ instagram-scraper tirtoid -m 100 --comments --media-types none
 
 ## Mengaktifkan paket
 
-Beberapa paket yang akan digunakan dalam studi kasus ini diantaranya adalah `jsonlite`, `listviewer`, dan `tidyverse`. Silakan pasang (jika belum) dan aktifkan tiga paket tersebut terlebih dahulu. Isilang bagian '___' dengan jawaban yang tepat!
+Beberapa paket yang akan digunakan dalam studi kasus ini di antaranya adalah `jsonlite`, `listviewer`, dan `tidyverse`. Silakan pasang (jika belum) dan aktifkan tiga paket tersebut terlebih dahulu. Isilah bagian '___' dengan jawaban yang tepat!
 
 ```{r load-packages}
 library(jsonlite)
@@ -52,7 +52,7 @@ Data hasil *scrapping* telah tersedia dalam sub-direktori `data-raw/tirtoid` den
 tirto_raw <- fromJSON("data-raw/tirtoid/tirtoid.json")
 ```
 
-Selanjutnya silakan melakukan inspeksi terhadap `tirto_raw` untuk meilhat strukturnya. Anda dapat menggunakan fungsi `str` untuk melakukan hal tersebut, namun untuk mempermudah silakan Anda pergunakan fungsi `jsonedit()` dari paket `listviewer`. Pergunakan argumen `mode = "view"`!
+Selanjutnya, silakan lakukan inspeksi terhadap `tirto_raw` untuk melihat strukturnya. Anda dapat menggunakan fungsi `str` untuk melakukan hal tersebut, namun untuk mempermudah silakan Anda pergunakan fungsi `jsonedit()` dari paket `listviewer`. Pergunakan argumen `mode = "view"`!
 
 ```{r inspect-list}
 jsonedit(tirto_raw, mode = "view")
@@ -60,29 +60,26 @@ jsonedit(tirto_raw, mode = "view")
 
 ## Ekstraksi data
 
-Setelah melakukan inspeksi struktur data `tirto_raw`, Anda mungkin menyadari bahwa sejatinya konten data tersimpan sebagai elemen pertama dalam `list`.Ekstraklah elemen pertama tersebut dengan menggunakan fungsi `pluck()`! Kemudian kita juga akan melakukan beberapa proses untuk akhirnya menyimpan `list` tersebut ke dalam sebuah obyek `tibble` bernama `tirto_tbl` sebagai berikut:
+Setelah melakukan inspeksi struktur data `tirto_raw`, Anda mungkin menyadari bahwa sejatinya konten data tersimpan sebagai elemen pertama dalam `list`. Ekstraklah elemen pertama tersebut dengan menggunakan fungsi `pluck()`! Kemudian kita akan melakukan beberapa proses untuk akhirnya menyimpan `list` tersebut ke dalam sebuah obyek `tibble` bernama `tirto_tbl` sebagai berikut:
 
 ```{r transform-list}
 tirto_tbl <-
-  tirto_raw %>% 
-  pluck(1) %>% 
+  tirto_raw %>%
+  pluck(1) %>%
   jsonlite::flatten() %>%
   transpose() %>%
   enframe(name = "id", value = "post")
 tirto_tbl
 ```
 
-Selanjutnya kita dapat melakukan ekstraksi data dengan menggunakan fungsi `map()` dari paket `purrr`. Selain itu, data hasil ekstraksi tersebut dapat dengan mudah kita simpan sebagai kolom baru dengan menggunakan fungsi `mutate()` dari paket `dplyr`. Perhatikan dan lengkapilah bagian yang kosong pada baris kode berikut!
-
+Selanjutnya, kita dapat melakukan ekstraksi data dengan menggunakan fungsi `map()` dari paket `purrr`. Selain itu, data hasil ekstraksi tersebut dapat dengan mudah kita simpan sebagai kolom baru dengan menggunakan fungsi `mutate()` dari paket `dplyr`. Perhatikan dan lengkapilah bagian yang kosong pada baris kode berikut!
 
 ```{r use-map}
 tirto_tbl %>%
   mutate(
     post_time = map(post, "taken_at_timestamp"),
     is_video = map(post, "is_video"),
-    caption = map(post, list(
-      "edge_media_to_caption.edges", "node", "text"
-    )),
+    caption = map(post, list("edge_media_to_caption.edges", "node", "text")),
     tags = map(post, "tags"),
     video_view = map(post, "video_view_count"),
     media_like = map(post, "edge_media_preview_like.count"),
@@ -92,16 +89,14 @@ tirto_tbl %>%
   )
 ```
 
-Anda telah berhasil mengekstrak data dan menyimpan hasilnya ke dalam beberapa kolom baru. Namun jika diperhatikan maka akan nampak jelas bahwa jenis kolom hasil ekstraksi tersebut masih berupa `list`. Anda dapat menyelesaikan permasalahan tersebut dengan cara menggunakan varian dari fungsi `map()`. Bacalah dokumentasi dari fungsi `map()` dengan cara menjalankan `?map` atau `help(map)` pada konsol! Apa persyaratan yang harus dipenuhi agar varian `map()` tersebut dapat bekerja dengan baik?
+Anda telah berhasil mengekstrak data dan menyimpan hasilnya ke dalam beberapa kolom baru. Namun, jika diperhatikan, akan nampak jelas bahwa jenis kolom hasil ekstraksi tersebut masih berupa `list`. Anda dapat menyelesaikan permasalahan tersebut dengan cara menggunakan varian dari fungsi `map()`. Bacalah dokumentasi dari fungsi `map()` dengan cara menjalankan `?map` atau `help(map)` pada konsol! Apa persyaratan yang harus dipenuhi agar varian `map()` tersebut dapat bekerja dengan baik?
 
 ```{r use-map-variant}
 tirto_tbl %>%
   mutate(
     post_time = map_int(post, "taken_at_timestamp"),
     is_video = map_lgl(post, "is_video"),
-    caption = map_chr(post, list(
-      "edge_media_to_caption.edges", "node", "text"
-    )),
+    caption = map_chr(post, list("edge_media_to_caption.edges", "node", "text")),
     tags = map(post, "tags"),
     video_view = map_int(post, "video_view_count"),
     media_like = map_int(post, "edge_media_preview_like.count"),
@@ -133,11 +128,11 @@ smart_extract <- function(.x, ...) {
 }
 ```
 
-Sekarang terapkanlah fungsi `smart_extract()` pada `tirto_tbl`! Anda dapat meniru baris kode pada *chunk* `use-map` atau `use-map-variant` dan kemudian mengganti fungsi `map()` atau variannya dengan `smart_extract()`. Sebagai catatan, Anda tidak memerlukan fungsi `list()` untuk mengekstrak data yang terletak di dalam sub-`list`. Simpanlah hasil ekstraksi data dalam obyek R bernama `tirto_extracted`!
+Sekarang, terapkanlah fungsi `smart_extract()` pada `tirto_tbl`! Anda dapat meniru baris kode pada *chunk* `use-map` atau `use-map-variant` dan kemudian mengganti fungsi `map()` atau variannya dengan `smart_extract()`. Sebagai catatan, Anda tidak memerlukan fungsi `list()` untuk mengekstrak data yang terletak di dalam sub-`list`. Simpanlah hasil ekstraksi data dalam obyek R bernama `tirto_extracted`!
 
 ```{r use-smart-extract}
-tirto_extracted <- 
-  tirto_tbl %>% 
+tirto_extracted <-
+  tirto_tbl %>%
   mutate(
     post_time = smart_extract(post, "taken_at_timestamp"),
     is_video = smart_extract(post, "is_video"),
@@ -152,17 +147,17 @@ tirto_extracted <-
 tirto_extracted
 ```
 
-Selamat Anda telah berhasil melakukan ekstraksi data! Namun pekerjaan Anda belum selesai karena masih ada beberapa kolom yang harus dibenahi. Kita akan menggunakan beberapa teknik dasar *data carpentry* untuk memperbaiki data seperti yang akan dicontohkan dalam *chunk* selanjutnya. Dapatkah Anda menjelaskan tahapan apa saja yang dilakukan dalam fungsi `mutate()` dan `select()`?
+Anda telah berhasil melakukan ekstraksi data! Namun pekerjaan Anda belum selesai karena masih ada beberapa kolom yang harus dibenahi. Kita akan menggunakan beberapa teknik dasar *data carpentry* untuk memperbaiki data seperti yang akan dicontohkan dalam *chunk* selanjutnya. Dapatkah Anda menjelaskan tahapan apa saja yang dilakukan dalam fungsi `mutate()` dan `select()`?
 
 ```{r extract-posts}
 tirto_posts <-
-  tirto_extracted %>% 
+  tirto_extracted %>%
   mutate(
     post_time = as.POSIXct(post_time, origin = "1970-01-01"), # straighforward processing
     caption = caption %>% str_remove_all("\\n") %>% str_trim(), # lengthly processing
     n_tags = map_int(tags, length), # map using one function with no arguments
     tags = map_chr(tags, ~ paste(.x, collapse = ", ")) # map using lamda function
-  ) %>% 
+  ) %>%
   select(id, post_time, is_video, caption, tags, n_tags, everything(), -post)
 tirto_posts
 ```
@@ -170,18 +165,20 @@ tirto_posts
 + Memperbaiki penulisan waktu pada kolom `post_time`
 + Menghapus tanda `\n` dan spasi berlebih pada kolom `caption`
 + Menghitung jumlah *tags* yang digunakan dan menyimpannya sebagai kolom baru bernama `n_tags`
-+ Menuliskan *tags* dengan sebagai `string` yang dipisahkan oleh tanda koma pada kolom `tags`
++ Menuliskan *tags* sebagai `string` yang dipisahkan oleh tanda koma pada kolom `tags`
 + Mengatur posisi kolom dan menghilangkan kolom `post`
 
-Hampir selesai! Tahap selanjutnya yang perlu dilakukan adalah mengekstrak informasi komentar dan menyimpannya baris per baris sesuai dengan `id` unggahan instagram Tirto. Anda cukup menggunakan fungsi `unnest()` dari paket `tidyr` untuk melakukan hal tersebut. Bacalah dokumentasi `unnest()` dan perhatikan apa syarat yang harus dipenuhi jika kita memiliki beberapa kolom yang akan di-*unnest* dengan sekaligus!. Meskipun pada dasarnya beberapa kolom telah diperbaiki, namun dalam contoh berikut kita akan kembali melakukan perbaikan kolom dengan menggunakan varian fungsi `mutate()` yaitu `mutate_at()` dan `mutate_if()`. Perhatikan baris kode berikut dan sebutkan kesamaan antara `mutate_at()` dan `mutate_if()`!
+Hampir selesai! Tahap selanjutnya yang perlu dilakukan adalah mengekstrak informasi komentar dan menyimpannya baris per baris sesuai dengan `id` unggahan instagram Tirto. Anda cukup menggunakan fungsi `unnest()` dari paket `tidyr` untuk melakukan hal tersebut. Bacalah dokumentasi `unnest()` dan perhatikan apa syarat yang harus dipenuhi jika kita memiliki beberapa kolom yang akan di-*unnest* sekaligus! Meskipun pada dasarnya beberapa kolom telah diperbaiki, namun dalam contoh berikut kita akan kembali melakukan perbaikan kolom dengan menggunakan varian fungsi `mutate()`, yaitu `mutate_at()` dan `mutate_if()`. Perhatikan baris kode berikut dan sebutkan kesamaan antara `mutate_at()` dan `mutate_if()`!
 
 ```{r extract-comments}
-tirto_comments <- 
-  tirto_posts %>% 
-  unnest() %>% 
-  mutate_at(vars(ends_with("time")), ~as.POSIXct(.x, origin  = "1970-01-01")) %>% 
-  mutate_if(is.character, ~ .x %>% str_remove_all("\\n") %>% str_trim())
+tirto_comments <-
+  tirto_posts %>%
+  unnest() %>%
+  mutate_at(vars(ends_with("time")), ~ as.POSIXct(.x, origin = "1970-01-01")) %>%
+  mutate_if(is.character, ~ .x %>%
+    str_remove_all("\\n") %>%
+    str_trim())
 tirto_comments
 ```
 
-> Selamat Anda telah berhasil menyelesaikan studi kasus ini! Sebagai tahap terakhir Anda dapat menyimpan `tirto_comments` sebagai berkas CSV atau lainnya. Perjalanan dari `JSON` menjadi `CSV` telah Anda lakukan dengan sukses :) 
+> Anda telah berhasil menyelesaikan studi kasus ini! Sebagai tahap terakhir, Anda dapat menyimpan `tirto_comments` sebagai berkas CSV atau lainnya. Perjalanan dari `JSON` menjadi `CSV` telah Anda lakukan dengan sukses :) 
