--- a/2019-08-16_data-rectangling-in-r/hands-on.Rmd
+++ b/2019-08-16_data-rectangling-in-r/hands-on.Rmd
@@ -40,8 +40,8 @@ Beberapa paket yang akan digunakan dalam studi kasus ini di antaranya adalah `js
 
 ```{r load-packages}
 library(jsonlite)
-library(listviewer)
-library(tidyverse)
+library(___)
+library(___)
 ```
 
 ## Impor dan inspeksi data
@@ -49,13 +49,13 @@ library(tidyverse)
 Data hasil *scrapping* telah tersedia dalam sub-direktori `data-raw/tirtoid` dengan nama berkas `tirtoid.json`. Kita akan menggunakan fungsi `fromJSON()` dari paket `jsonlite` untuk mengimpor berkas tersebut. Impor dan simpanlah berkas tersebut sebagai obyek R dengan nama `tirto_raw`!
 
 ```{r import-data}
-tirto_raw <- fromJSON("data-raw/tirtoid/tirtoid.json")
+___ <- fromJSON("data-raw/tirtoid/___")
 ```
 
 Selanjutnya, silakan lakukan inspeksi terhadap `tirto_raw` untuk melihat strukturnya. Anda dapat menggunakan fungsi `str` untuk melakukan hal tersebut, namun untuk mempermudah silakan Anda pergunakan fungsi `jsonedit()` dari paket `listviewer`. Pergunakan argumen `mode = "view"`!
 
 ```{r inspect-list}
-jsonedit(tirto_raw, mode = "view")
+jsonedit(tirto_raw, mode = ___)
 ```
 
 ## Ekstraksi data
@@ -65,7 +65,7 @@ Setelah melakukan inspeksi struktur data `tirto_raw`, Anda mungkin menyadari bah
 ```{r transform-list}
 tirto_tbl <-
   tirto_raw %>%
-  pluck(1) %>%
+  ___ %>%
   jsonlite::flatten() %>%
   transpose() %>%
   enframe(name = "id", value = "post")
@@ -78,13 +78,13 @@ Selanjutnya, kita dapat melakukan ekstraksi data dengan menggunakan fungsi `map(
 tirto_tbl %>%
   mutate(
     post_time = map(post, "taken_at_timestamp"),
-    is_video = map(post, "is_video"),
+    is_video = map(post, "___"),
     caption = map(post, list("edge_media_to_caption.edges", "node", "text")),
-    tags = map(post, "tags"),
-    video_view = map(post, "video_view_count"),
+    tags = map(post, "___"),
+    video_view = map(post, "___"),
     media_like = map(post, "edge_media_preview_like.count"),
-    comments_username = map(post, list("comments.data", "owner", "username")),
-    comments_time = map(post, list("comments.data", "created_at")),
+    comments_username = map(post, list("comments.data", "owner", "___")),
+    comments_time = map(post, list("comments.data", "___")),
     comments_text = map(post, list("comments.data", "text"))
   )
 ```
@@ -94,20 +94,19 @@ Anda telah berhasil mengekstrak data dan menyimpan hasilnya ke dalam beberapa ko
 ```{r use-map-variant}
 tirto_tbl %>%
   mutate(
-    post_time = map_int(post, "taken_at_timestamp"),
-    is_video = map_lgl(post, "is_video"),
+    post_time = map_int(post, "___"),
+    is_video = map_lgl(post, "___"),
     caption = map_chr(post, list("edge_media_to_caption.edges", "node", "text")),
     tags = map(post, "tags"),
-    video_view = map_int(post, "video_view_count"),
+    video_view = map_int(post, "___"),
     media_like = map_int(post, "edge_media_preview_like.count"),
-    comments_username = map(post, list("comments.data", "owner", "username")),
-    comments_time = map(post, list("comments.data", "created_at")),
-    comments_text = map(post, list("comments.data", "text"))
+    comments_username = map(post, list("comments.data", "___", "username")),
+    comments_time = map(post, list("___", "created_at")),
+    comments_text = map(post, list("___", "text"))
   )
 ```
 
 Setelah menjalankan baris kode di atas, sekarang hasil ekstraksi menjadi lebih baik karena beberapa kolom telah memiliki jenis data yang sesuai. Namun bagaimana caranya untuk melakukan hal seperti di atas secara otomatis? Apakah ada alternatif lain tanpa harus memilih varian `map()` satu per satu? Tentu saja ada! Hal tersebut dapat dilakukan dengan cara membuat sebuah fungsi ekstraksi data yang secara cerdas melakukan *flattening* pada hasil ekstraksi. Kita akan membuat fungsi tersebut dengan nama `smart_extract()` sebagai berikut:
-
 
 ```{r define-smart-extract}
 #' Smart extractor
@@ -131,18 +130,18 @@ smart_extract <- function(.x, ...) {
 Sekarang, terapkanlah fungsi `smart_extract()` pada `tirto_tbl`! Anda dapat meniru baris kode pada *chunk* `use-map` atau `use-map-variant` dan kemudian mengganti fungsi `map()` atau variannya dengan `smart_extract()`. Sebagai catatan, Anda tidak memerlukan fungsi `list()` untuk mengekstrak data yang terletak di dalam sub-`list`. Simpanlah hasil ekstraksi data dalam obyek R bernama `tirto_extracted`!
 
 ```{r use-smart-extract}
-tirto_extracted <-
+___ <-
   tirto_tbl %>%
   mutate(
     post_time = smart_extract(post, "taken_at_timestamp"),
-    is_video = smart_extract(post, "is_video"),
-    caption = smart_extract(post, "edge_media_to_caption.edges", "node", "text"),
-    tags = smart_extract(post, "tags"),
-    video_view = smart_extract(post, "video_view_count"),
-    media_like = smart_extract(post, "edge_media_preview_like.count"),
+    ___,
+    ___,
+    ___,
+    ___,
+    ___,
     comments_username = smart_extract(post, "comments.data", "owner", "username"),
-    comments_time = smart_extract(post, "comments.data", "created_at"),
-    comments_text = smart_extract(post, "comments.data", "text")
+    ___,
+    ___
   )
 tirto_extracted
 ```
@@ -162,18 +161,25 @@ tirto_posts <-
 tirto_posts
 ```
 
-+ Memperbaiki penulisan waktu pada kolom `post_time`
-+ Menghapus tanda `\n` dan spasi berlebih pada kolom `caption`
-+ Menghitung jumlah *tags* yang digunakan dan menyimpannya sebagai kolom baru bernama `n_tags`
-+ Menuliskan *tags* sebagai `string` yang dipisahkan oleh tanda koma pada kolom `tags`
-+ Mengatur posisi kolom dan menghilangkan kolom `post`
++ ___
++ ___
++ ___
++ ___
++ ___
 
-Hampir selesai! Tahap selanjutnya yang perlu dilakukan adalah mengekstrak informasi komentar dan menyimpannya baris per baris sesuai dengan `id` unggahan instagram Tirto. Anda cukup menggunakan fungsi `unnest()` dari paket `tidyr` untuk melakukan hal tersebut. Bacalah dokumentasi `unnest()` dan perhatikan apa syarat yang harus dipenuhi jika kita memiliki beberapa kolom yang akan di-*unnest* sekaligus! Meskipun pada dasarnya beberapa kolom telah diperbaiki, namun dalam contoh berikut kita akan kembali melakukan perbaikan kolom dengan menggunakan varian fungsi `mutate()`, yaitu `mutate_at()` dan `mutate_if()`. Perhatikan baris kode berikut dan sebutkan kesamaan antara `mutate_at()` dan `mutate_if()`!
+Hampir selesai! Tahap selanjutnya yang perlu dilakukan adalah mengekstrak informasi komentar dan menyimpannya baris per baris sesuai dengan `id` unggahan instagram Tirto. Anda cukup menggunakan fungsi `unnest()` dari paket `tidyr` untuk melakukan hal tersebut. Bacalah dokumentasi `unnest()` dan perhatikan apa syarat yang harus dipenuhi jika kita memiliki beberapa kolom yang akan di-*unnest* sekaligus!
 
 ```{r extract-comments}
 tirto_comments <-
   tirto_posts %>%
-  unnest() %>%
+  ___
+tirto_comments
+```
+
+Meskipun pada dasarnya beberapa kolom telah dibenahi, namun dalam contoh berikut kita akan kembali melakukan perbaikan jenis data pada beberapa kolom dengan menggunakan varian fungsi `mutate()`, yaitu `mutate_at()` dan `mutate_if()`. Perhatikan baris kode berikut dan sebutkan kesamaan antara `mutate_at()` dan `mutate_if()`!
+
+```{r clean-up}
+tirto_comments %>%
   mutate_at(vars(ends_with("time")), ~ as.POSIXct(.x, origin = "1970-01-01")) %>%
   mutate_if(is.character, ~ .x %>%
     str_remove_all("\\n") %>%
@@ -181,4 +187,4 @@ tirto_comments <-
 tirto_comments
 ```
 
-> Anda telah berhasil menyelesaikan studi kasus ini! Sebagai tahap terakhir, Anda dapat menyimpan `tirto_comments` sebagai berkas CSV atau lainnya. Perjalanan dari `JSON` menjadi `CSV` telah Anda lakukan dengan sukses :) 
+> Anda telah berhasil menyelesaikan studi kasus ini! Sebagai tahap terakhir, Anda dapat menyimpan `tirto_comments` sebagai berkas CSV atau lainnya. Perjalanan dari `JSON` menjadi `CSV` telah Anda lakukan dengan sukses :)
